# pg-gui

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: release.yml
assets/: icon.icns
docker/init/: 01-sample-data.sql  02-pg-stat-statements.sql
src/: ai.rs  app.rs  config.rs  db.rs  export.rs  file_tree.rs  instance.rs  lsp.rs  main.rs  results.rs  snippets.rs  statement.rs
