[package]
name = "pg-gui"
version = "0.4.0"
edition = "2024"

# Used by `cargo bundle` to produce pg-gui.app with the Dock/Finder icon.
[package.metadata.bundle]
name = "pg-gui"
identifier = "com.gintspolis.pg-gui"
icon = ["assets/icon.icns"]
osx_minimum_system_version = "11.0"

[dependencies]
anyhow = "1"
# Already in the tree via gpui; used for the date in export file names.
chrono = "0.4"
dirs = "6"
futures = "0.3"
# gpui-component's tree-sitter-0.26 line lives only on git `main` (0.5.2), which
# pulls gpui from the zed git tree rather than crates.io. gpui is left unpinned
# (git, no rev) to match gpui-component's own dependency so both resolve to the
# same gpui — the exact rev is pinned reproducibly in Cargo.lock. Needed so
# tree-sitter resolves to 0.26 in lockstep with the pgls fork's `bump_treesitter`
# branch (was: crates.io gpui 0.2.2 + 0.25.x).
gpui = { git = "https://github.com/zed-industries/zed" }
# gpui split the platform out into its own crate; `gpui_platform::application()`
# replaces the old `Application::new()`. Features match gpui-component's own.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/gintsgints/gpui-component", branch = "my_fixes", features = ["tree-sitter-languages"] }
# Must stay in lockstep with the lsp-types version gpui-component uses,
# so our provider impls and its editor traits share the same types.
lsp-types = "0.97"
# The Postgres Language Server, embedded as a library (was: spawned
# `postgrestools lsp-proxy` binary). Points at a fork so a modified server can
# be used. `pgls_workspace` enables its `db` feature by default.
pgls_analyse = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_completions = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_configuration = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_diagnostics = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_fs = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_text_size = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
pgls_workspace = { git = "https://github.com/gintsgints/postgres-language-server", branch = "bump_treesitter" }
postgres = "0.19"
# Native file-open dialog with a controllable start directory; gpui's
# `prompt_for_paths` can't set one (its Save panel counterpart can, so the
# save/export dialogs stay on gpui).
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
# gpui and tree-sitter are unusably slow without optimized dependencies
opt-level = 3
